# fhir-kindling

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  benchmark_result.json  bundle.json  cli.py  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: documentation.yml  github_actions.yml  main_ci.yml  publish_test_pypi.yml
add/: index.html
api/: index.html
app/backend/: .gitignore  db.py  main.py  memory_storage.py
app/backend/api/: api.py
app/backend/models/: query.py  resource.py  server.py
app/backend/src/: resources.py
app/frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.cjs
app/frontend/public/: index.html
app/frontend/src/: App.svelte  App.vue  main.ts
benchmark/: index.html
benchmarks/: README.md  benchmark.py  benchmark_servers.py  docker-compose.yml
benchmarks/results/: 10000-generate_results.json  query-results.json
bundles/: Patients_bundle_LMU.json  Patients_bundle_TUM.json  Patients_bundle_UKT.json
connect/: index.html
data/: first_names.txt  last_names.txt
delete/: index.html
docs/: Makefile  add.md  api.md  benchmark.md  conf.py  connect.md  delete.md  index.md  index.rst  installation.rst  make.bat  query.md  serde.md  transfer.md  update.md  upload.md  usage.rst
ds/: index.html
examples/: cord_data_to_fhir.py  demo.ipynb  docker-compose.yml  examples.ipynb  hapi-application.yml  observations_and_conditions.yml  patients_kindling.yml  query_response.json
examples/cord/: A2-1.csv
examples/gecco/bundles/: GECCO_bundle_patient_01b0994c-f944-4bb1-983d-6ecc060fd6d6.json  GECCO_bundle_patient_0204faf1-07ac-4a88-9400-1251761a8052.json  GECCO_bundle_patient_0451b2db-55bb-4899-b816-58b4922f8eda.json  GECCO_bundle_patient_05b2ec41-0fd0-45cb-a91d-7f9b590c27c7.json  GECCO_bundle_patient_05e6854f-4331-4e9c-87a9-e328b0442b54.json  GECCO_bundle_patient_08f7ac68-af9f-473d-a743-4dc01763988a.json  GECCO_bundle_patient_09d1366a-b36e-49fd-945b-f8e8d28298a5.json  GECCO_bundle_patient_12aa47aa-5e13-4f04-9365-24447ed8ab84.json  GECCO_bundle_patient_1897eade-50fc-4c49-83cc-295ca8f9bb7c.json  GECCO_bundle_patient_18abf1bc-5f42-4e05-8c9d-97c2370aa78e.json  GECCO_bundle_patient_18ad8232-c945-44bc-9dc8-efaa200102ae.json  GECCO_bundle_patient_1ae266f0-6af2-4d43-8fa9-c2d504460af9.json  GECCO_bundle_patient_1b5f64ce-cbc6-4f61-b69b-406e52a1d900.json  GECCO_bundle_patient_1eabf599-7b25-48f9-8c16-d9db4df28162.json  GECCO_bundle_patient_1ec9eb89-bbd2-4b67-9553-3d712b498fdd.json  GECCO_bundle_patient_1efeb580-fb87-4fed-9b9a-396e3f6c3a8b.json  GECCO_bundle_patient_1f92aacb-0102-4255-b509-d7366224faf9.json  GECCO_bundle_patient_20508a42-6ccf-4c0c-81a0-cd5e3046c008.json  GECCO_bundle_patient_21ff9d4a-4427-4891-a9e3-7e482e3bccf2.json  GECCO_bundle_patient_25104bb0-3434-481c-a7bb-0bdf04ed4d8c.json  GECCO_bundle_patient_2920477e-517a-4450-8021-52619fc69d69.json  GECCO_bundle_patient_2acd7a79-55d7-46ad-b3a8-5f06a063487a.json  GECCO_bundle_patient_2e3ee682-9127-4033-ba11-0d818b8c6fef.json  GECCO_bundle_patient_2e7f4e4b-f5ae-4a63-8ea8-227eda5830ed.json  GECCO_bundle_patient_34893c71-537e-4a2a-99bb-7cb4f222e5ac.json  GECCO_bundle_patient_352df84e-a7ab-4cf9-8dcd-26d86326b9c4.json  (+74 more)
examples/hiv_sequences/: sequences_1.txt  sequences_2.txt  sequences_3.txt  sequences_4.txt  sequences_5.txt
fhir_kindling/: __init__.py  auth.py  cli.py  delete.py  fhir_kindling.py  generate.py  generate_yaml_template.py  media.py  observation.py  patient.py  query.py  resource_generator.py  upload.py
fhir_kindling/benchmark/: __init__.py  bench.py  benchmark_search.py  benchmark_server.py  constants.py  data.py  figures.py  results.py
fhir_kindling/bundle/: __init__.py  upload.py
fhir_kindling/cli/: cli.py  delete.py  generate.py  update.py  upload.py
fhir_kindling/fhir_query/: __init__.py  base.py  fhir_query.py  query_async.py  query_functions.py  query_parameters.py  query_response.py  query_sync.py
fhir_kindling/fhir_server/: __init__.py  auth.py  fhir_server.py  response.py  server_responses.py  server_summary.py  summary.py  transactions.py  transfer.py
fhir_kindling/figures/: __init__.py  resource_plots.py  summary.py
fhir_kindling/generators/: __init__.py  base.py  condition.py  dataset.py  field_generator.py  media.py  molecular_sequence.py  names.py  observation.py  patient.py  resource_generator.py  time_series_generator.py
fhir_kindling/plots/: __init__.py  resource_plots.py  summary.py
fhir_kindling/privacy/: k_anonymity.py
fhir_kindling/query/: __init__.py  fhir_query.py
fhir_kindling/resources/: __init__.py  fhir_resource_wrapper.py
fhir_kindling/serde/: __init__.py  bundle.py  csv_parser.py  flatten.py  json.py
fhir_kindling/tests/: conftest.py  fixtures.py  test_auth.py  test_benchmark.py  test_date_util.py  test_fhir_query.py  test_fhir_server.py  test_generators.py  test_plots.py  test_privacy.py  test_serialization.py  test_util.py
fhir_kindling/util/: __init__.py  coro.py  date_utils.py  references.py  resources.py  retry_transport.py
query/: index.html
scripts/: container_coverage.sh
search/: search_index.json
serde/: index.html
testing/: benchmark_2023-08-13T18:55:07.942360+02:00.json  benchmark_2023-08-13T19:15:09.720210+02:00.json  benchmark_2023-08-13T22:29:54.508023+02:00.json  benchmark_2023-08-14T07:14:40.313199+02:00.json  benchmark_2023-08-14T08:32:50.974004+02:00.json  benchmark_result.json  docker-compose.yml  get_diverse_bundle.py  prefill.py  realm.json  result_plots.py
tests/: __init__.py  fixtures.py  test_auth.py  test_fhir_kindling.py  test_fhir_query.py  test_fhir_server.py  test_generators.py  test_plots.py  test_query.py  test_query_functions.py  test_resource_util.py  test_serialization.py  test_util.py
transfer/: index.html
update/: index.html
upload/: index.html
(+49 files in other folders)
