[tool.poetry]
name = "fhir-kindling"
version = "0.9.7"
description = "Python library for working with FHIR servers and resources."
authors = ["Michael Graf <michael.graf3110@gmail.com>"]
readme = ["README.md", "CHANGELOG.md"]
packages = [{ include = "fhir_kindling" }]
homepage = "https://migraf.github.io/fhir-kindling/"
repository = "https://github.com/migraf/fhir-kindling"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps",
]
keywords = ["python", "fhir", "hl7", "client"]


[tool.poetry.dependencies]
python = "^3.11"
"fhir.resources" = "*"
pendulum = "*"
tqdm = "*"
orjson = "*"
xmltodict = "*"
pydantic = "*"
networkx = "*"
httpx = "*"
authlib = "*"
pandas = { version = "*", optional = true }
plotly = { version = "*", optional = true }
sqlmodel = { version = "*", optional = true }
fastapi = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
cachetools = { version = "*", optional = true }
types-cachetools = { version = "*", optional = true }


[tool.poetry.extras]
ds = ["pandas", "plotly"]
app = ["fastapi", "uvicorn", "sqlmodel", "cachetools", "types-cachetools"]


[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"
tox = "*"
mkdocs = "*"
mkdocs-material = "*"
twine = "*"
mkdocstrings = { extras = ["python-legacy"], version = "*" }
flake8 = "*"
pytest-asyncio = "*"
rise = "*"
python-dotenv = "*"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
