[tool.poetry]
name = "fhir-kindling"
version = "1.0.0a0"
description = "Python library for working with FHIR servers and resources."
authors = ["Michael Graf <michael.graf3110@gmail.com>"]
# todo add changelog when multiple readme bug is fixed
readme = "README.md"
packages = [{ include = "fhir_kindling" }]
homepage = "https://migraf.github.io/fhir-kindling/"
repository = "https://github.com/migraf/fhir-kindling"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["python", "fhir", "hl7", "client"]


[tool.poetry.dependencies]
python = "^3.11"
"fhir.resources" = "*"
pendulum = "*"
tqdm = "*"
orjson = "*"
xmltodict = "*"
pydantic = "*"
networkx = "*"
httpx = "*"
authlib = "*"
pandas = { version = "*", optional = true }
plotly = { version = "*", optional = true }
sqlmodel = { version = "*", optional = true }
fastapi = { version = "*", optional = true }
uvicorn = { version = "*", optional = true }
cachetools = { version = "*", optional = true }
types-cachetools = { version = "*", optional = true }


[tool.poetry.extras]
ds = ["pandas", "plotly"]
app = ["fastapi", "uvicorn", "sqlmodel", "cachetools", "types-cachetools"]
all = ["pandas", "plotly", "fastapi", "uvicorn", "sqlmodel", "cachetools", "types-cachetools"]


[tool.poetry.group.dev.dependencies]
pytest = "*"
coverage = "*"
tox = "*"
mkdocs = "*"
mkdocs-material = "*"
twine = "*"
mkdocstrings = { extras = ["python-legacy"], version = "*" }
flake8 = "*"
pytest-asyncio = "*"
rise = "*"
python-dotenv = "*"
black = "^22.12.0"
ruff = "^0.0.195"
pre-commit = "^2.21.0"


[tool.ruff]
line-length = 120


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I001"]
ignore = []
per-file-ignores = { "*/__init__.py" = ["F401"] }

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
